# empl-front

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: main.cpp
src/core/cmd/: department.h  employee.h  position.h
src/core/contracts/: i_configurable_client.h  i_department_repo.h  i_department_svc.cpp  i_department_svc.h  i_employee_repo.h  i_employee_svc.cpp  i_employee_svc.h  i_http_client.h  i_position_repo.h  i_position_svc.cpp  i_position_svc.h
src/core/models/: department.h  employee.cpp  employee.h  position.h
src/helpers/: msg.h
src/infrastructure/: appconfig.cpp  appconfig.h  httpclient.cpp  httpclient.h  logging.cpp  logging.h
src/repositories/: department.cpp  department.h  employee.cpp  employee.h  position.cpp  position.h
src/services/: department.cpp  department.h  employee.cpp  employee.h  position.cpp  position.h
src/ui/: departmentpage.cpp  departmentpage.h  departmentpage.ui  employeepage.cpp  employeepage.h  employeepage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  positionpage.cpp  positionpage.h  positionpage.ui  settings.cpp  settings.h  settings.ui
src/ui/common/: basepage.h
src/ui/models/table/: department.cpp  department.h  employee.cpp  employee.h  position.cpp  position.h
tests/: CMakeLists.txt
tests/mocks/: mock_configurable_client.h  mock_department_repo.h  mock_department_svc.h  mock_employee_repo.h  mock_employee_svc.h  mock_http_client.h  mock_position_repo.h  mock_position_svc.h
tests/models/: test_department_model.cpp  test_employee_model.cpp  test_position_model.cpp
tests/repositories/: test_department_repo.cpp  test_employee_repo.cpp  test_position_repo.cpp
tests/services/: test_department_svc.cpp  test_employee_svc.cpp  test_position_svc.cpp
tests/ui/: test_department_page.cpp  test_employee_page.cpp  test_main_window.cpp  test_position_page.cpp
